--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Electron for RPG Maker MZ",
   "main": "main.js",
   "scripts": {
-    "start": "npx electron .",
-    "debug": "npx electron . debug",
+    "start": "electron .",
+    "test": "electron . test",
+    "debug": "electron . test,debug",
     "deployWin": "node build-win.js"
   },
   "repository": {
@@ -18,7 +19,7 @@
   },
   "homepage": "https://github.com/triacontane/ElectronForMz/blob/main/README.md",
   "devDependencies": {
-    "electron": "^5.0.2",
-    "electron-builder": "^20.41.0"
+    "electron": "^5.0.13",
+    "electron-builder": "^20.44.4"
   }
 }
