--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-for-mz",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Electron for RPG Maker MZ",
   "main": "main.js",
   "scripts": {
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/triacontane/ElectronForMz/blob/main/README.md",
   "devDependencies": {
-    "electron": "^5.0.13",
+    "electron": "20.3.9",
     "electron-builder": "^20.44.4"
   }
 }
