--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
         "cross-env": "^7.0.0",
         "electron": "^25.3.0",
         "electron-builder": "^24.4.0",
-        "asarmor": "^2.0.0"
+        "asarmor": "2.1.0-beta.10"
     }
 }
