--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,56 +1,52 @@
 name: Release
 on:
-  workflow_call:
-    inputs:
-      dry-run:
-        description: 'Compiles the app but not upload artifacts to distribution server'
-        default: false
-        required: false
-        type: boolean
+  push:
+    branches:
+      - '*'
 
 concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: true
 
-
 defaults:
   run:
     shell: 'bash'
 
-
 jobs:
   draft_release:
-
     strategy:
       fail-fast: true
       matrix:
-        os: [ macos-latest, ubuntu-latest, windows-latest ]
+        os: [macos-latest, ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
 
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
         env:
-          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+          GH_TOKEN: ${{ secrets.SECRET }}
+        run: npx --no-install electron-builder --config .electron-builder.config.js
 
-      - run: npm run build
+      - name: Remove unpacked directories
+        run: |
+          rm -rf dist/linux-unpacked
+          rm -rf dist/win-unpacked
+          rm -rf dist/mac
 
-      - name: Compile artifacts ${{ inputs.dry-run && '' || 'and upload them to github release' }}
-        # I use this action because it is capable of retrying multiple times if there are any issues with the distribution server
-        uses: nick-fields/retry@v2
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
         with:
-          timeout_minutes: 15
-          max_attempts: 6
-          retry_wait_seconds: 15
-          retry_on: error
-          shell: 'bash'
-          command: npx --no-install electron-builder --config .electron-builder.config.js --publish ${{ inputs.dry-run && 'never' || 'always' }}
-        env:
-          GH_TOKEN: ${{ secrets.github_token }} # GitHub token, automatically provided (No need to define this secret in the repo settings)
+          name: my-artifact
+          path: dist/
