--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
         "url": "git+https://github.com/triacontane/ElectronForMz.git"
     },
     "author": "Triacontane",
+    "copyright": "Copyright © 2023 ${author} All rights reserved.",
     "bugs": {
         "url": "https://github.com/triacontane/ElectronForMz/issues"
     },
     "homepage": "https://github.com/triacontane/ElectronForMz/blob/main/README.md",
     "devDependencies": {
         "cross-env": "^7.0.0",
-        "electron": "^25.3.0",
-        "electron-builder": "^24.4.0",
+        "electron": "^26.2.0",
+        "electron-builder": "^24.6.0",
         "asarmor": "^2.0.0"
     }
 }
